# simple-v4l2-cam

./: .gitignore  CMakeLists.txt  CROSS-COMPILING.txt  Makefile  README.md  v4l2_camera_flow
doc/: v4l2_camera_flow
src/: api.h  cam_test.c  cam_test.h  camera.c  camera.h  demo.h  log.c  log.h  main.c  tiny_cam.c  tiny_cam.h  util.c  util.h  window.c  window.h
src/include/: camera.h  log.h  util.h
src/libcamera_base/: camera.c  util.c
tool/: mj2j.py
